cynic-querygen/tests/snapshots/starwars_querygen__sanity_test_starwars_query.snap
---
source: cynic-querygen/tests/starwars-querygen.rs
expression: "document_to_fragment_structs(query, schema,\n                             &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::query_module(
    schema_path = "schema.graphql",
    query_module = "query_dsl",
)]
mod queries {
    use super::{query_dsl, types::*};

    #[derive(Clone, cynic::FragmentArguments)]
    pub struct QueryArguments {
        pub filmId: Option<cynic::Id>,
    }

    #[derive(cynic::QueryFragment)]
    #[cynic(graphql_type = "Query", argument_struct = "QueryArguments")]
    pub struct Query {
        #[cynic_arguments(id = args.filmId)]
        pub film: Option<Film>,
    }

    #[derive(cynic::QueryFragment)]
    #[cynic(graphql_type = "Film")]
    pub struct Film {
        pub title: Option<String>,
        pub director: Option<String>,
    }

}

#[cynic::query_module(
    schema_path = "schema.graphql",
    query_module = "query_dsl",
)]
mod types {
}

mod query_dsl{
    use super::types::*;
    cynic::query_dsl!("schema.graphql");
}

